[tool.poetry]
name = "imajie"
version = "0.1.0"
description = "An API that generates picture pages."
authors = ["Kenji Yamashita <y.kenji.b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
